# baboon-mmb

./: .gitignore  BoundingBox.m  Cargo.toml  Demo_fRMC.m  InfaceExtFrankWolfe.m  Object.m  Point.m  README.md  amfd.m  amfd.py  assignmentoptimal.m  baboon_mmb.m  config.json  fRMC.m  kill-process  lrmc.m  lrmc.py  main.py  mmb.py  optimize.asv  optimize.m  optimize.py  optimize_config.txt  pf.m  pf.py  pyproject.toml  readme.txt  requirements.txt
BaboonMMBPackage/: BaboonMMBPackage.ctf  __init__.py
src/: main.rs
src/amfd/: mod.rs
src/lrmc/: InfaceExtFrankWolfe.m  fRMC.m  mod.rs
src/pf/: mod.rs
