[tool.poetry]
name = "baboon-mmb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
opencv-contrib-python = "^4.8.1.78"
opencv-python = "^4.8.1.78"
scipy = "^1.11.4"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
